# Connectivity

./: README
kokkos_scc/: CMakeLists.txt  Makefile  README  README.md  color_baseline.cpp  color_manhattan_global.cpp  color_manhattan_local.cpp  color_manhattan_local_hybrid.cpp  fwbw_baseline.cpp  fwbw_manhattan_global.cpp  fwbw_manhattan_local.cpp  fwbw_manhattan_local_hybrid.cpp  scc_color.cpp  scc_fwbw.cpp  scc_main.cpp  scc_run.cpp  scc_trim.cpp  scc_verify.cpp
multistep/: Makefile  README  cc_bfs.cpp  cc_color.cpp  cc_main.cpp  cc_trim.cpp  cc_verify.cpp  scc_color.cpp  scc_fwbw.cpp  scc_main.cpp  scc_serial.cpp  scc_trim.cpp  scc_verify.cpp  test.graph
